[gd_scene load_steps=2 format=3 uid="uid://b7nnr4hvgy0c"]

[ext_resource type="Script" path="res://Menu.gd" id="1_avfsl"]

[node name="Menu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.270588, 1, 1, 1)
script = ExtResource("1_avfsl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -525.0
offset_right = -55.0
offset_bottom = -332.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme_override_constants/separation = 50

[node name="Computer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1 Player
"

[node name="PVP" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2 Player"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Computer" to="." method="_on_computer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PVP" to="." method="_on_pvp_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_button_pressed"]
